syntax = "proto2";

package apollo.planning;

// 参考线平滑配置

message QpSplineSmootherConfig {                                         // 二次spline平滑器有5个配置参数
  optional uint32 spline_order = 1 [default = 5];
  optional double max_spline_length = 2 [default = 25];
  optional double regularization_weight = 3 [default = 0.1];
  optional double second_derivative_weight = 4 [default = 0.0];
  optional double third_derivative_weight = 5 [default = 100];
}

message SpiralSmootherConfig {                                           // spiral平滑器有很多个权重选项
  // The max deviation of spiral reference line smoother.
  optional double max_deviation = 1 [default = 0.1];

  // The piecewise length of spiral smoother.
  optional double piecewise_length = 2 [default = 10.0];

  // The iteration num of spiral reference line smoother.");
  optional int32 max_iteration = 3 [default = 1000];

  // The desired convergence tol for spiral opt;
  optional double opt_tol = 4 [default = 1.0e-8];

  // The acceptable convergence tol for spiral opt
  optional double opt_acceptable_tol = 5 [default = 1e-6];

  // The number of acceptable iters before termination for spiral opt;
  optional int32 opt_acceptable_iteration = 6 [default = 15];

  // The weight of curve length term in objective function
  optional double opt_weight_curve_length = 7 [default = 0.0];

  // The weight of kappa term in objective function
  optional double opt_weight_kappa = 8 [default = 1.5];

  // The weight of dkappa term in objective function
  optional double opt_weight_dkappa = 9 [default = 1.0];

  // The weight of d2kappa term in objective function
  optional double opt_weight_d2kappa = 10 [default = 0.0];
}

message CosThetaSmootherConfig {                                       // 余弦的平滑器
  // The max deviation of cosTheta reference line smoother.
  optional double max_point_deviation = 1 [default = 5.0];

  // The number of iteration in optimization
  optional int32 num_of_iteration = 2 [default = 10000];

  // The weight of cosine of included angle between points
  optional double weight_cos_included_angle = 3 [default = 10000.0];

  // The tolerance of optimization 
  optional double acceptable_tol = 4 [default = 1e-1];

  // Relax constraint on end condition
  optional double relax = 5 [default = 0.2];

  // Reopt bound for anchor points
  optional double reopt_qp_bound = 6 [default = 0.05];
  }
// 参考线配置项
message ReferenceLineSmootherConfig {                                          // 参考线的配置项
  enum DrivingSide {                                                           // 开车靠那边进行开车
    LEFT = 1;   // left hand driving country like UK and JP                    // 英国和日本靠左行驶
    RIGHT = 2;  // right hand driving country like CN and US                   // 中国和美国靠右行驶
  }
  optional double max_constraint_interval = 1 [default = 5];                   // 最大内部约束
  optional double longitudinal_boundary_bound = 2 [default = 1.0];             // 纵向边框的bound
  optional double lateral_boundary_bound = 3 [default = 0.1];                  // 横向边框的bound
  optional uint32 num_of_total_points = 4 [default = 500];                     // reference line的总点数
  optional double curb_shift = 5 [default = 0.2];                              // 控制的shift偏移量
  optional DrivingSide driving_side = 6 [default = RIGHT];                     // 默认是靠右行驶
  // If a lane width larger than this value times adc width, this lane is
  // considered as a wide lane
  // wide lane handing feature will be disabled if this number is negative
  optional double wide_lane_threshold_factor = 7 [default = 2.0];              // 横向的宽度(左正右负)
  // In a wide lane case, leave the left side (or right side on a left-handed
  // driving map) this amount times adc width
  optional double wide_lane_shift_remain_factor = 8 [default = 0.5];           // 宽车道保留因子

  // The output resolution for reference line.
  optional double resolution = 9 [default = 0.02];                             // 中心参考线的采样值的最小单位

  oneof SmootherConfig {                                                       // 平滑器选三者之一
    QpSplineSmootherConfig qp_spline = 20;                                     // 二次规划的平滑器
    SpiralSmootherConfig spiral = 21;                                          // spiral平滑器
    CosThetaSmootherConfig cos_theta = 22;                                     // 余弦平滑器
  }
}
